Fix for right-hand nav spacing

--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -172,7 +172,6 @@
     margin: 0;
     padding: 0 60px 0 0;
     width: 300px;
-    line-height: 24px;
     li {
         padding: 2px 8px 2px 15px;
         float: left;
@@ -180,7 +179,7 @@
         a {
             display: block;
             font-size: 12px;
-            padding: 0 10px 0 10px;
+            padding: 5px;
             text-decoration: none;
         }
     }
